// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Circular Skeleton 1`] = `
<ForwardRef(Box)
  className="skeleton"
  sx={
    Object {
      "borderRadius": "50%",
      "display": "inline",
      "height": 200,
      "width": 200,
    }
  }
>
  ‌
</ForwardRef(Box)>
`;

exports[`Snapshot Testing Optional Props 1`] = `
<ForwardRef(Box)
  className="skeleton"
  sx={
    Object {
      "borderRadius": "0%",
      "display": "inline",
      "height": 200,
      "width": 200,
    }
  }
>
  ‌
</ForwardRef(Box)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<ForwardRef(Box)
  className="skeleton"
  sx={
    Object {
      "borderRadius": "0%",
      "display": "inline",
      "height": undefined,
      "width": undefined,
    }
  }
>
  ‌
</ForwardRef(Box)>
`;
